# mewcp-mailchimp

./: .gitignore  README.md  mailchimp_mcp_server.py  malchimp_mcp_server.py  pyproject.toml  railway.json  requirements.txt  server.py
tools/: __init__.py  marketing_operations.py  mcp.json  store_operations.py  template_operations.py  workflow.json
utils/: __init__.py  mailchimp_client.py
