[project]
name = "mailchimp-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=2.14.4",
    "flask>=3.1.2",
    "mailchimp-marketing>=3.0.80",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
